--- a/styles.css
+++ b/styles.css
@@ -8,4 +8,19 @@
 body{
 background-color: var(--cor-de-fundo);
 margin: 0;
-}
+} 
+.cabecalho{
+    background-color: var(--cor-cabecalho);
+    padding: 1em;
+    }
+    .container{
+    display: flex;
+    align-items: center;
+    }
+    .container imagem, .container frase{
+    padding: 1em;
+    }
+    .container titulo, .container frase{
+    display:none;
+    }
+
